--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
   # Build stage - converting md file to html using MkDocs
   convert_md_to_html:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' # Run for non-main branches
+    if: github.ref != 'refs/heads/main' # Run for non-main branches
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -46,7 +46,7 @@ jobs:
   deploy_to_test:
     needs: convert_md_to_html
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' # Run for non-main branches
+    if: github.ref != 'refs/heads/main' # Run for non-main branches
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -92,7 +92,7 @@ jobs:
   # Deployment to production folder in S3 bucket
   deploy_to_production:
     runs-on: ubuntu-latest
-    if: github.ref != 'refs/heads/main' # Run for main branch
+    if: github.ref == 'refs/heads/main' # Run for main branch
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
