--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
 
       - uses: actions/checkout@v3
       - name: Assign reviewers
-        uses: ahmadnassri/action-assign-reviewers@v2
+        uses: ahmadnassri/action-assign-reviewers@main
         with:
           reviewers: hshah-mitre
           assignees: hshah-mitre
