--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,10 +36,7 @@ jobs:
 
       - uses: actions/checkout@v3
       - name: Assign reviewers
-        uses: ahmadnassri/action-assign-reviewers@main
-        with:
-          reviewers: hshah-mitre
-          assignees: hshah-mitre
+        uses: kentaro-m/auto-assign-action@v1.2.4
           
       #- uses: kentaro-m/auto-assign-action@v1.2.4
       
