--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,17 @@ jobs:
         uses: kentaro-m/auto-assign-action@v1.2.4
         with:
           reviewers: hshah-mitre
+      - name: Assign assignee via GitHub API
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          curl -X POST \
+          -H "Authorization: token $GITHUB_TOKEN" \
+          -H "Accept: application/vnd.github+json" \
+          https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/assignees \
+          -d '{"assignees":["hshah-mitre"]}'
+
+          
       
   # Build stage - converting md file to html using MkDocs
   convert_md_to_html:
