--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
           -H "Authorization: token $GITHUB_TOKEN" \
           -H "Accept: application/vnd.github+json" \
           https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/assignees \
-          -d '{"assignees":["hshah-mitre"]}'
+          -d "{\"assignees\":[\"${{ github.actor }}\"]}"
 
       - name: Assign reviewer via GitHub API
         env:
@@ -54,7 +54,7 @@ jobs:
             -H "Authorization: token $GITHUB_TOKEN" \
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/requested_reviewers \
-            -d '{"reviewers":["vsong15"]}'
+            -d '{"reviewers":["vsong15"], "team_reviewers":["AI4SDLC-Reviewers"]}'
 
           
       
