--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,29 +45,28 @@ jobs:
           -H "Accept: application/vnd.github+json" \
           https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/assignees \
           -d "{\"assignees\":[\"${{ github.actor }}\"]}"
-      - name: list of teams reviewer via GitHub API
+      - name: List teams via GitHub API
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ORG_PAT: ${{ secrets.PRODUCTION_REPO_ACCESS_TOKEN }}
         run: |
-          curl -H "Authorization: token $GITHUB_TOKEN" \
+          curl -H "Authorization: token $ORG_PAT" \
           -H "Accept: application/vnd.github+json" \
           https://api.github.com/orgs/Code-dot-mil/teams
 
-
-      - name: check team reviewer via GitHub API
+      - name: Check team reviewer via GitHub API
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ORG_PAT: ${{ secrets.PRODUCTION_REPO_ACCESS_TOKEN }}
         run: |
-          curl -H "Authorization: token $GITHUB_TOKEN" \
+          curl -H "Authorization: token $ORG_PAT" \
            -H "Accept: application/vnd.github+json" \
            https://api.github.com/orgs/Code-dot-mil/teams/ai4sdlc-reviewer
 
       - name: Assign team reviewer via GitHub API
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ORG_PAT: ${{ secrets.ORG_PAT }}
         run: |
           curl -v -X POST \
-            -H "Authorization: token $GITHUB_TOKEN" \
+            -H "Authorization: token $PRODUCTION_REPO_ACCESS_TOKEN" \
             -H "Accept: application/vnd.github+json" \
             -H "Content-Type: application/json" \
             -d '{"team_reviewers":["ai4sdlc-reviewer"]}' \
