--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,38 +45,18 @@ jobs:
           -H "Accept: application/vnd.github+json" \
           https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/assignees \
           -d "{\"assignees\":[\"${{ github.actor }}\"]}"
-      - name: List teams via GitHub API
-        env:
-          ORG_PAT: ${{ secrets.ORG_PAT }}
-        run: |
-          curl -H "Authorization: token $ORG_PAT" \
-          -H "Accept: application/vnd.github+json" \
-          https://api.github.com/orgs/Code-dot-mil/teams
-
-      - name: Check team reviewer via GitHub API
-        env:
-          ORG_PAT: ${{ secrets.ORG_PAT }}
-        run: |
-          curl -H "Authorization: token $ORG_PAT" \
-           -H "Accept: application/vnd.github+json" \
-           https://api.github.com/orgs/Code-dot-mil/teams/ai4sdlc-reviewer
 
       - name: Assign team reviewer via GitHub API
         env:
           ORG_PAT: ${{ secrets.ORG_PAT }}
         run: |
-          curl -v -X POST \
+          curl -X POST \
             -H "Authorization: token $ORG_PAT" \
             -H "Accept: application/vnd.github+json" \
             -H "Content-Type: application/json" \
             -d '{"team_reviewers":["ai4sdlc-reviewer"]}' \
             https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/requested_reviewers
-
-
-  #         -d '{"reviewers":["vsong15"], "team_reviewers":["ai4sdlc-reviewer"]}'
-
-          
-      
+            
   # Build stage - converting md file to html using MkDocs
   convert_md_to_html:
     runs-on: ubuntu-latest
@@ -88,7 +68,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: 3.12
 
       - name: Install MkDocs and dependencies
         run: |
