--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -145,8 +145,8 @@ jobs:
           echo "pr_number while deploying =$PR_NUMBER"          
           pwd
           #aws s3 ls
-          aws s3 sync site/ s3://$S3_BUCKET_NAME/test
-          aws s3 sync site/ s3://$S3_BUCKET_NAME/MergeRequest/$PR_NUMBER
+          #aws s3 sync site/ s3://$S3_BUCKET_NAME/test
+          #aws s3 sync site/ s3://$S3_BUCKET_NAME/MergeRequest/$PR_NUMBER
          
   # Deployment to production folder in S3 bucket
   deploy_to_production:
