--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -136,13 +136,18 @@ jobs:
         with:
           name: site
           path: site
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+      #- name: Configure AWS credentials
+      #  uses: aws-actions/configure-aws-credentials@v4
+      #  with:
+      #    aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #    aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #    aws-region: us-east-1  # change if needed
+      - name: configure aws credentials
+        uses: aws-actions/configure-aws-credentials@v1.7.0
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1  # change if needed
-
+          role-to-assume: arn:aws:iam::677043464939:role/GitHubAction-AssumeRoleWithAction
+          role-session-name: GitHub_to_AWS_via_FederatedOIDC
+          aws-region: us-east-1
       - name: Deploy to Test Environment
         env:
           S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
@@ -154,7 +159,7 @@ jobs:
             $PR_API_URL | jq '.[0].number')
           echo "pr_number while deploying =$PR_NUMBER"          
           pwd
-          #aws s3 ls
+          aws s3 ls
           #aws s3 sync site/ s3://$S3_BUCKET_NAME/test
           #aws s3 sync site/ s3://$S3_BUCKET_NAME/MergeRequest/$PR_NUMBER
          
