--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,7 +58,7 @@ jobs:
 
           # Add a comment with the S3 preview link
           PR_NUMBER=${{ github.event.pull_request.number }}
-          COMMENT="Preview your changes at: http://het-rnd-bucket.s3-website-us-east-1.amazonaws.com/MergeRequest/${PR_NUMBER}/index.html"
+          COMMENT="Preview your changes at: http://het-rnd-bucket.s3-website-us-east-1.amazonaws.com/mergeRequest/${PR_NUMBER}/index.html"
           curl -X POST \
             -H "Authorization: token $GITHUB_TOKEN" \
             -H "Accept: application/vnd.github+json" \
@@ -162,7 +162,7 @@ jobs:
           pwd
           aws s3 ls
           aws s3 sync site/ s3://$S3_BUCKET_NAME/test
-          #aws s3 sync site/ s3://$S3_BUCKET_NAME/MergeRequest/$PR_NUMBER
+          aws s3 sync site/ s3://$S3_BUCKET_NAME/mergeRequest/$PR_NUMBER
          
   # Deployment to production folder in S3 bucket
   deploy_to_production:
@@ -199,4 +199,4 @@ jobs:
             -H "Authorization: Bearer $GITHUB_TOKEN" \
             $PR_API_URL | jq '.[0].number')
           echo "after pr_number=$PR_NUMBER"          
-          aws s3 sync s3://$S3_BUCKET_NAME/MergeRequest/$PR_NUMBER s3://$S3_BUCKET_NAME/production/
+          aws s3 sync s3://$S3_BUCKET_NAME/mergeRequest/$PR_NUMBER s3://$S3_BUCKET_NAME/production/
