Enhance deploy script with completion message and cleanup
Add deployment completion message and cleanup step

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -198,3 +198,6 @@ jobs:
             $PR_API_URL | jq '.[0].number')
           echo "after pr_number=$PR_NUMBER"          
           aws s3 sync s3://$S3_BUCKET_NAME/mergeRequest/$PR_NUMBER s3://$S3_BUCKET_NAME/production/
+          echo "deploy complete..."
+          # Delete contents of the pr folder
+          aws s3 rm s3://$S3_BUCKET_NAME/mergeRequest/$PR_NUMBER --recursive
