--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -198,6 +198,7 @@ jobs:
             $PR_API_URL | jq '.[0].number')
           echo "after pr_number=$PR_NUMBER"          
           aws s3 sync s3://$S3_BUCKET_NAME/mergeRequest/$PR_NUMBER s3://$S3_BUCKET_NAME/production/
-          echo "deploy complete..."
+          echo "deploy complete to production !!!"
           # Delete contents of the pr folder
           aws s3 rm s3://$S3_BUCKET_NAME/mergeRequest/$PR_NUMBER --recursive
+          echo "PR folder deleted successfully !!!"
