--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,7 +88,7 @@ jobs:
         run: |
           PR_NUMBER=${{ github.event.pull_request.number }}
           REVIEWER=${{ github.event.review.user.login }}
-          TEAM_HANDLE="@${{ github.repository_owner }}/ai4sdlc-reviewers"
+          TEAM_HANDLE="@${{ github.repository_owner }}/ai4sdlc-approval"
           COMMENT="$TEAM_HANDLE PR #$PR_NUMBER has been approved by @$REVIEWER and is ready for final review."
           curl -X POST \
             -H "Authorization: token $GITHUB_TOKEN" \
