--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ on:
     
 
 permissions:
-  contents: read # This is required for actions/checkout
+  contents: write # This is required for actions/checkout
   pull-requests: write
   id-token: write # This is required requesting the JWT    
 
