--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,11 @@ permissions:
 jobs:
   auto_assign:
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && github.event.action != 'closed'
+    #if: github.event_name == 'pull_request' && github.event.action != 'closed'
+    if: github.event.review.state == 'commented'
     steps:
+      - name: Debug Event Payload
+        run: echo "${{ toJson(github.event) }}"
       - name: Checkout code
         uses: actions/checkout@v4
       - name: configure aws credentials
