--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,11 @@ jobs:
     #if: github.event_name == 'pull_request' && github.event.action != 'closed'
     if: github.event.review.state == 'commented'
     steps:
+      - name: Debug Reviewer Login
+        run: echo "Reviewer Login:${{ github.event.review.user.login }}"
       - name: Debug Event Payload
         run: echo "${{ toJson(github.event) }}"
+        
       - name: Checkout code
         uses: actions/checkout@v4
       - name: configure aws credentials
