Refactor deploy workflow for MkDocs build and deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -110,40 +110,6 @@ jobs:
             -H "Content-Type: application/json" \
             -d "{\"team_reviewers\":[\"ai4sdlc-approval\"]}" \
             https://api.github.com/repos/${{ github.repository }}/pulls/$PR_NUMBER/requested_reviewers -v
-
-
-###
-  # Build stage - converting md file to html using MkDocs
-  convert_md_to_html_gh :
-    runs-on: ubuntu-latest
-    if: github.ref != 'refs/heads/main' # Run for non-main branches
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.9
-
-      - name: Install MkDocs and dependencies
-        run: |
-          pip install mkdocs mkdocs-material
-
-      - name: Build project with MkDocs
-        run: |
-          echo "Building your project..."
-          mkdocs build
-          echo "pwd in build project with MKDocs"
-      - name: Add .nojekyll
-        run: touch site/.nojekyll
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./site   
-###
             
   # Build stage - converting md file to html using MkDocs
   convert_md_to_html:
@@ -272,3 +238,41 @@ jobs:
           # Delete contents of the pr folder
           aws s3 rm s3://$S3_BUCKET_NAME/mergeRequest/$PR_NUMBER --recursive
           echo "PR folder deleted successfully !!!"
+
+###
+  # Build stage - converting md file to html using MkDocs
+  deploy_to_page :
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' &&
+        github.event.action == 'closed' &&
+        github.event.pull_request.merged == true &&
+        github.event.pull_request.base.ref == 'main'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
+
+      - name: Install MkDocs and dependencies
+        run: |
+          pip install mkdocs mkdocs-material
+
+      - name: Build project with MkDocs
+        run: |
+          echo "Building your project..."
+          mkdocs build
+          echo "pwd in build project with MKDocs"
+          
+      - name: Add .nojekyll
+        run: touch site/.nojekyll
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./site   
+###
+          
